# tray-monitor

./: .eslintrc.json  LICENCE  README.md  electron-builder.json5  index.html  package.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  ci.yml
electron/: electron-env.d.ts
electron/main/: index.ts
electron/preload/: index.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AboutDialog.vue
src/samples/: node-api.ts
src/styles/: index.css
src/utils/: index.ts
